--- a/Jama/src/main/webapp/home.xhtml
+++ b/Jama/src/main/webapp/home.xhtml
@@ -38,7 +38,7 @@
 
 					<p:row>
 						<p:column>
-							<p:button value="#{msgs.view_contracts}" outcome="agreementList"
+							<p:button value="#{msgs.viewEdit_contracts}" outcome="agreementList"
 								styleClass="buttons" />
 						</p:column>
 						<p:column>
