--- a/Jama/src/main/webapp/resources/sections/installmentWizData.xhtml
+++ b/Jama/src/main/webapp/resources/sections/installmentWizData.xhtml
@@ -18,11 +18,11 @@
 				</p:column>
 
 				<p:column rendered="#{cc.attrs.editingDisable == false}">
-
 					<h:inputText id="taxableAmount" value="#{installmentManager.installment.wholeTaxableAmount}" label="#{msgs.amount}" required="true">
 						<f:validator binding="#{moneyValidator}" />
 						<p:ajax process="@this" update="amount" />
 					</h:inputText>
+					<h:outputText value=" #{msgs.currencySym}" />
 				</p:column>
 
 				<p:column rendered="#{cc.attrs.editingDisable == true}">
@@ -46,6 +46,7 @@
 				<p:column rendered="#{cc.attrs.editingDisable == true}">
 					<h:outputText id="iva_o" value="#{installmentManager.installment.IVA_amount}" />
 				</p:column>
+				<h:outputText value=" %" />
 			</p:row>
 
 			<p:row>
