--- a/Jama/src/main/webapp/resources/sections/installmentWizShareTable.xhtml
+++ b/Jama/src/main/webapp/resources/sections/installmentWizShareTable.xhtml
@@ -26,6 +26,7 @@
 						<f:validator binding="#{percentValidator}" />
 					</h:inputText>
 					<h:outputText id="atheneumCapitalBalance_o" value="#{instShareTablePB.shareTable.atheneumCapitalBalance}" rendered="#{cc.attrs.editingDisable}" />
+					<h:outputText value=" %" />
 				</p:column>
 
 				<p:column>
@@ -49,6 +50,7 @@
 						<f:validator binding="#{percentValidator}" />
 					</h:inputText>
 					<h:outputText id="atheneumCommonBalance_o" value="#{instShareTablePB.shareTable.atheneumCommonBalance}" rendered="#{cc.attrs.editingDisable}" />
+					<h:outputText value=" %" />
 				</p:column>
 
 				<p:column>
@@ -73,6 +75,7 @@
 						<f:validator binding="#{percentValidator}" />
 					</h:inputText>
 					<h:outputText id="personnel_o" value="#{instShareTablePB.shareTable.personnel}" rendered="#{cc.attrs.editingDisable}" />
+					<h:outputText value=" %" />
 				</p:column>
 
 				<p:column>
@@ -95,6 +98,7 @@
 						<f:validator binding="#{percentValidator}" />
 					</h:inputText>
 					<h:outputText id="structures_o" value="#{instShareTablePB.shareTable.structures}" rendered="#{cc.attrs.editingDisable}" />
+					<h:outputText value=" %" />
 				</p:column>
 
 				<p:column>
@@ -112,6 +116,7 @@
 
 				<p:column>
 					<h:outputText id="goodsAndServices" value="#{instShareTablePB.shareTable.goodsAndServices}" />
+					<h:outputText value=" %" />
 				</p:column>
 
 				<p:column>
@@ -126,89 +131,147 @@
 			<p:row>
 				<p:column colspan="3">
 					<p:fieldset legend="#{msgs.shareTableGoodsValues}">
-						<h:panelGrid id="instGoodsValuesGrid" columns="3" columnClasses="label, value, percents" styleClass="grid">
+						<p:panelGrid id="instGoodsValuesGrid" styleClass="grid">
 
-							<h:outputText value="#{msgs.shareTableTrip}:" />
-							<h:inputText id="businessTrip" value="#{instShareTablePB.shareTable.businessTrip}" label="#{msgs.shareTableTrip}" required="true"
-								rendered="#{not cc.attrs.editingDisable}">
-								<p:ajax event="valueChange" process="@this" update="instValuesGrid personnelShares personnalShareInput" />
-								<f:validator binding="#{percentValidator}" />
-							</h:inputText>
-							<h:outputText id="businessTrip_o" value="#{instShareTablePB.shareTable.businessTrip}" rendered="#{cc.attrs.editingDisable}" />
+							<p:row>
+								<p:column>
+									<h:outputText value="#{msgs.shareTableTrip}:" />
+								</p:column>
 
-							<h:outputText id="percentBusinessTrip" value="#{instShareTablePB.computePercentOnGoodsAndServices(instShareTablePB.shareTable.businessTrip)}">
-								<f:attribute name="plain" value="false" />
-							</h:outputText>
+								<p:column>
+									<h:inputText id="businessTrip" value="#{instShareTablePB.shareTable.businessTrip}" label="#{msgs.shareTableTrip}" required="true"
+										rendered="#{not cc.attrs.editingDisable}">
+										<p:ajax event="valueChange" process="@this" update="instValuesGrid personnelShares personnalShareInput" />
+										<f:validator binding="#{percentValidator}" />
+									</h:inputText>
+									<h:outputText id="businessTrip_o" value="#{instShareTablePB.shareTable.businessTrip}" rendered="#{cc.attrs.editingDisable}" />
+									<h:outputText value=" %" />
+								</p:column>
 
+								<p:column>
+									<h:outputText id="percentBusinessTrip" value="#{instShareTablePB.computePercentOnGoodsAndServices(instShareTablePB.shareTable.businessTrip)}">
+										<f:attribute name="plain" value="false" />
+									</h:outputText>
+								</p:column>
+							</p:row>
 
+							<p:row>
+								<p:column>
+									<h:outputText value="#{msgs.shareTableConsMaterials}:" />
+								</p:column>
 
-							<h:outputText value="#{msgs.shareTableConsMaterials}:" />
-							<h:inputText id="consumerMaterials" value="#{instShareTablePB.shareTable.consumerMaterials}" label="#{msgs.shareTableConsMaterials}"
-								required="true" rendered="#{not cc.attrs.editingDisable}">
-								<p:ajax event="valueChange" process="@this" update="instValuesGrid personnelShares personnalShareInput" />
-								<f:validator binding="#{percentValidator}" />
-							</h:inputText>
-							<h:outputText id="consumerMaterials_o" value="#{instShareTablePB.shareTable.consumerMaterials}" rendered="#{cc.attrs.editingDisable}" />
+								<p:column>
+									<h:inputText id="consumerMaterials" value="#{instShareTablePB.shareTable.consumerMaterials}" label="#{msgs.shareTableConsMaterials}"
+										required="true" rendered="#{not cc.attrs.editingDisable}">
+										<p:ajax event="valueChange" process="@this" update="instValuesGrid personnelShares personnalShareInput" />
+										<f:validator binding="#{percentValidator}" />
+									</h:inputText>
+									<h:outputText id="consumerMaterials_o" value="#{instShareTablePB.shareTable.consumerMaterials}" rendered="#{cc.attrs.editingDisable}" />
+									<h:outputText value=" %" />
+								</p:column>
 
-							<h:outputText id="percentConsumerMaterials"
-								value="#{instShareTablePB.computePercentOnGoodsAndServices(instShareTablePB.shareTable.consumerMaterials)}">
-								<f:attribute name="plain" value="false" />
-							</h:outputText>
-
-
-
-							<h:outputText value="#{msgs.shareTableInvMaterials}:" />
-							<h:inputText id="inventoryMaterials" value="#{instShareTablePB.shareTable.inventoryMaterials}" label="#{msgs.shareTableInvMaterials}"
-								required="true" rendered="#{not cc.attrs.editingDisable}">
-								<p:ajax event="valueChange" process="@this" update="instValuesGrid personnelShares personnalShareInput" />
-								<f:validator binding="#{percentValidator}" />
-							</h:inputText>
-							<h:outputText id="inventoryMaterials_o" value="#{instShareTablePB.shareTable.inventoryMaterials}" rendered="#{cc.attrs.editingDisable}" />
-
-							<h:outputText id="percentInventoryMaterials"
-								value="#{instShareTablePB.computePercentOnGoodsAndServices(instShareTablePB.shareTable.inventoryMaterials)}">
-								<f:attribute name="plain" value="false" />
-							</h:outputText>
-
-
-
-							<h:outputText value="#{msgs.shareTableRentals}:" />
-							<h:inputText id="rentals" value="#{instShareTablePB.shareTable.rentals}" label="#{msgs.shareTableRentals}" required="true"
-								rendered="#{not cc.attrs.editingDisable}">
-								<p:ajax event="valueChange" process="@this" update="instValuesGrid personnelShares personnalShareInput" />
-								<f:validator binding="#{percentValidator}" />
-							</h:inputText>
-							<h:outputText id="rentals_o" value="#{instShareTablePB.shareTable.rentals}" rendered="#{cc.attrs.editingDisable}" />
-
-							<h:outputText id="percentRentals" value="#{instShareTablePB.computePercentOnGoodsAndServices(instShareTablePB.shareTable.rentals)}">
-								<f:attribute name="plain" value="false" />
-							</h:outputText>
+								<p:column>
+									<h:outputText id="percentConsumerMaterials"
+										value="#{instShareTablePB.computePercentOnGoodsAndServices(instShareTablePB.shareTable.consumerMaterials)}">
+										<f:attribute name="plain" value="false" />
+									</h:outputText>
+								</p:column>
+							</p:row>
 
 
+							<p:row>
+								<p:column>
+									<h:outputText value="#{msgs.shareTableInvMaterials}:" />
+								</p:column>
 
-							<h:outputText value="#{msgs.shareTableContrPersonnel}:" />
-							<h:inputText id="personnelOnContract" value="#{instShareTablePB.shareTable.personnelOnContract}" label="#{msgs.shareTableContrPersonnel}"
-								required="true" rendered="#{not cc.attrs.editingDisable}">
-								<p:ajax event="valueChange" process="@this" update="instValuesGrid personnelShares personnalShareInput" />
-								<f:validator binding="#{percentValidator}" />
-							</h:inputText>
-							<h:outputText id="personnelOnContract_o" value="#{instShareTablePB.shareTable.personnelOnContract}" rendered="#{cc.attrs.editingDisable}" />
+								<p:column>
+									<h:inputText id="inventoryMaterials" value="#{instShareTablePB.shareTable.inventoryMaterials}" label="#{msgs.shareTableInvMaterials}"
+										required="true" rendered="#{not cc.attrs.editingDisable}">
+										<p:ajax event="valueChange" process="@this" update="instValuesGrid personnelShares personnalShareInput" />
+										<f:validator binding="#{percentValidator}" />
+									</h:inputText>
+									<h:outputText id="inventoryMaterials_o" value="#{instShareTablePB.shareTable.inventoryMaterials}" rendered="#{cc.attrs.editingDisable}" />
+									<h:outputText value=" %" />
+								</p:column>
 
-							<h:outputText id="percentPersonnelOnContract"
-								value="#{instShareTablePB.computePercentOnGoodsAndServices(instShareTablePB.shareTable.personnelOnContract)}">
-								<f:attribute name="plain" value="false" />
-							</h:outputText>
+								<p:column>
+									<h:outputText id="percentInventoryMaterials"
+										value="#{instShareTablePB.computePercentOnGoodsAndServices(instShareTablePB.shareTable.inventoryMaterials)}">
+										<f:attribute name="plain" value="false" />
+									</h:outputText>
+								</p:column>
+
+							</p:row>
+
+
+							<p:row>
+								<p:column>
+									<h:outputText value="#{msgs.shareTableRentals}:" />
+								</p:column>
+
+								<p:column>
+									<h:inputText id="rentals" value="#{instShareTablePB.shareTable.rentals}" label="#{msgs.shareTableRentals}" required="true"
+										rendered="#{not cc.attrs.editingDisable}">
+										<p:ajax event="valueChange" process="@this" update="instValuesGrid personnelShares personnalShareInput" />
+										<f:validator binding="#{percentValidator}" />
+									</h:inputText>
+									<h:outputText id="rentals_o" value="#{instShareTablePB.shareTable.rentals}" rendered="#{cc.attrs.editingDisable}" />
+
+									<h:outputText value=" %" />
+								</p:column>
+
+								<p:column>
+									<h:outputText id="percentRentals" value="#{instShareTablePB.computePercentOnGoodsAndServices(instShareTablePB.shareTable.rentals)}">
+										<f:attribute name="plain" value="false" />
+									</h:outputText>
+								</p:column>
+							</p:row>
 
 
 
-							<h:outputText value="#{msgs.shareTableOtherCosts}:" />
-							<h:outputText id="otherCost" value="#{instShareTablePB.shareTable.otherCost}" />
+							<p:row>
+								<p:column>
+									<h:outputText value="#{msgs.shareTableContrPersonnel}:" />
+								</p:column>
 
-							<h:outputText id="percentOtherCost" value="#{instShareTablePB.computePercentOnGoodsAndServices(instShareTablePB.shareTable.otherCost)}">
-								<f:attribute name="plain" value="false" />
-							</h:outputText>
+								<p:column>
+									<h:inputText id="personnelOnContract" value="#{instShareTablePB.shareTable.personnelOnContract}" label="#{msgs.shareTableContrPersonnel}"
+										required="true" rendered="#{not cc.attrs.editingDisable}">
+										<p:ajax event="valueChange" process="@this" update="instValuesGrid personnelShares personnalShareInput" />
+										<f:validator binding="#{percentValidator}" />
+									</h:inputText>
+									<h:outputText id="personnelOnContract_o" value="#{instShareTablePB.shareTable.personnelOnContract}" rendered="#{cc.attrs.editingDisable}" />
+									<h:outputText value=" %" />
+								</p:column>
 
-						</h:panelGrid>
+								<p:column>
+									<h:outputText id="percentPersonnelOnContract"
+										value="#{instShareTablePB.computePercentOnGoodsAndServices(instShareTablePB.shareTable.personnelOnContract)}">
+										<f:attribute name="plain" value="false" />
+									</h:outputText>
+								</p:column>
+							</p:row>
+
+
+
+							<p:row>
+								<p:column>
+									<h:outputText value="#{msgs.shareTableOtherCosts}:" />
+								</p:column>
+
+								<p:column>
+									<h:outputText id="otherCost" value="#{instShareTablePB.shareTable.otherCost}" />
+									<h:outputText value=" %" />
+								</p:column>
+
+								<p:column>
+									<h:outputText id="percentOtherCost" value="#{instShareTablePB.computePercentOnGoodsAndServices(instShareTablePB.shareTable.otherCost)}">
+										<f:attribute name="plain" value="false" />
+									</h:outputText>
+								</p:column>
+							</p:row>
+
+						</p:panelGrid>
 					</p:fieldset>
 				</p:column>
 			</p:row>
@@ -254,7 +317,7 @@
 
 			<p:columnGroup type="header">
 				<p:row>
-					<p:column headerText="#{msgs.chief}" />
+					<p:column headerText="#{msgs.shareTableInvolvedPersonnel}" />
 					<p:column colspan="2" headerText="#{msgs.share}" />
 					<p:column />
 				</p:row>
@@ -267,13 +330,14 @@
 			<p:column>
 				<p:cellEditor>
 					<f:facet name="output">
-						<h:outputText value="#{share.value}" />
+						<h:outputText value="#{share.value} %" />
 					</f:facet>
 					<f:facet name="input">
 						<h:inputText id="personnelTableShareValueInput" value="#{share.value}" label="#{msgs.table_share}">
 							<f:validator binding="#{percentValidator}" />
 							<p:ajax event="valueChange" process="@this" update="personnelShares" />
 						</h:inputText>
+						<h:outputText value=" %" />
 					</f:facet>
 				</p:cellEditor>
 			</p:column>
@@ -296,7 +360,7 @@
 
 			<p:row>
 				<p:column width="20%">
-					<h:outputText value="#{msgs.chief}" />
+					<h:outputText value="#{msgs.shareTableInvolvedPersonnel}" />
 				</p:column>
 
 				<p:column width="30%">
@@ -318,6 +382,7 @@
 						<p:ajax event="valueChange" process="@this" disabled="#{cc.attrs.editingDisable}" update="percentPersonnelShare" />
 						<f:validator binding="#{percentValidator}" />
 					</h:inputText>
+					<h:outputText value=" %" />
 				</p:column>
 
 				<p:column width="10%">
