--- a/Jama/src/main/webapp/resources/sections/agreementInstallmentsList.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementInstallmentsList.xhtml
@@ -29,7 +29,8 @@
 	<p:panel id="#{cc.attrs.panelId}" styleClass="semiEmptyPanel relative">
 
 		<p:contextMenu id="tableContextMenu" styleClass="contextMenu" widgetVar="w_tableContextMenu" for="installmentTable">
-			<p:menuitem process="@form" value="#{msgs.view}" icon="ui-icon-search" actionListener="#{installmentManager.viewInstallment()}" />
+			<p:menuitem process="@form" value="#{msgs.view}" icon="ui-icon-search" actionListener="#{installmentManager.viewInstallment()}"
+				oncomplete="#{cc.attrs.viewDialogWidgetVar}.show()" update=":#{p:component(cc.attrs.viewDialogId)}" />
 			<p:menuitem process="@form" value="#{msgs.edit}" icon="ui-icon-wrench" actionListener="#{installmentManager.editInstallment()}"
 				oncomplete="#{cc.attrs.editDialogWidgetVar}.show()" update=":#{p:component(cc.attrs.editDialogId)}" rendered="#{not cc.attrs.editingDisable}">
 				<p:resetInput target=":#{p:component(cc.attrs.editDialogId)}" />
@@ -37,7 +38,7 @@
 			<p:menuitem process="@form" value="#{msgs.remove}" icon="ui-icon-trash" oncomplete="delete_confirm.show();" />
 		</p:contextMenu>
 
-		<p:dataTable id="installmentTable" styleClass="hideShow" selectionMode="single" rowKey="#{installment.wholeTaxableAmount}" var="installment"
+		<p:dataTable id="installmentTable" styleClass="hideShow" selectionMode="single" rowKey="#{installment.indexInContract}" var="installment"
 			value="#{contractManager.contract.installments}" emptyMessage="#{msgs.noInstallmentFound}" selection="#{installmentManager.selectedInstallment}">
 
 			<p:ajax event="filter" oncomplete="setHideShow();" />
